Revert "ensure that the download button is always clickable"
This reverts commit 1975f9bc470e831e27ac2a51427f545be103f67c.

If content overlaps the download button that should be fixed. Putting
the download button on top of everything else looks bad, especially when
it's rendered above the floating header.

--- a/assets/css/style-freenet.css
+++ b/assets/css/style-freenet.css
@@ -115,8 +115,6 @@ border-radius: 0px;
 transition: all 0.5s ease-in-out;
 margin: 25px 5px 5px 0px;
 margin: 5px;
-position: relative;
-z-index: 1100;
 }
 
 .btn-custom-one {
